# diffplus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml
diffplus/: __init__.py  incremental_diff.py  indented_config.py
tests/: README.md  configA.txt  configB.txt  expected.py  test.py
