[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffplus"
version = "1.3.0"
authors = [
    { name="angely-dev", email="contact@brindereseau.fr" },
]
description = "Incremental and contextual diff between two indented configs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/angely-dev/diffplus"
"Bug Tracker" = "https://github.com/angely-dev/diffplus/issues"
